# emu-6502

./: .clang-tidy  .gitignore  Makefile.am  README.md  TODO.md  asm.c  check-clang-tidy.sh  configure.ac
.github/workflows/: build.yml
include/emu/: add.h
src/: add.c  main.c
tests/: libemu.c  runner.sh
tests/cases/: test-version.sh  test-version.txt
